# CFEEG

./: prod.py  pyproject.toml
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
